--- a/static/plugins/freenode/freenode.css
+++ b/static/plugins/freenode/freenode.css
@@ -1,12 +1,6 @@
 .fn-sponsor {
-    position: absolute;
-    z-index: 20;
-    bottom: 0px;
-    left: 0;
-    width: 100%;
-    padding: 10px 0;
-    font-size: 0.6em;
-    color: #333333;
+    text-align: center;
+    font-size: 0.9em;
 }
 
 .fn-sponsor a {
